Allow overriding CSR subjects
When a CSR is submitted, also provide a Subject field to override the
user supplied subject which is stored in the CSR.

This makes it easier to manage certificates that match policies for non
tech-savvy users.

--- a/app/views/certificates/_form.html.haml
+++ b/app/views/certificates/_form.html.haml
@@ -27,6 +27,7 @@
 
       = f.hidden_field :method, value: :csr
       = f.input :csr, as: :text, input_html: { class: "textarea" }
+      = f.input :subject
       = f.submit t(".save"), class: "button is-primary"
       = link_to t(".back"), @certificate.persisted? ? [@certificate_authority, @certificate] : certificate_authority_certificates_path(@certificate_authority), class: "button"
 -#
