Do not abbreviate certificates subjects
The matching regexp is wrong, but while fixing it we realized it was not
a good idea to try to hide some parts of the subject for the sake of
legibility: some subject naming may end-up with different certificates
being abbreviated the same way, making it harder to distinguish two
distinct certificates.

--- a/app/views/certificate_authorities/edit.html.haml
+++ b/app/views/certificate_authorities/edit.html.haml
@@ -1,4 +1,4 @@
-= content_for(:title, abbr_subject(@certificate_authority.subject))
+= content_for(:title, @certificate_authority.subject)
 
 = simple_form_for @certificate_authority do |f|
   = f.input :current_password
