--- a/app/views/certificate_authorities/show.html.haml
+++ b/app/views/certificate_authorities/show.html.haml
@@ -1,4 +1,4 @@
-- content_for(:title) { abbr_subject(@certificate_authority.subject) }
+- content_for(:title) { @certificate_authority.subject }
 
 - if false
   .notification.is-warning
