--- a/app/views/certificates/show.html.haml
+++ b/app/views/certificates/show.html.haml
@@ -1,4 +1,4 @@
-- content_for(:title) { abbr_subject(@certificate.subject) }
+- content_for(:title) { @certificate.subject }
 
 .columns
   .column.is-two-thirds
